@@ -135,6 +135,7 @@ inline static void  _slurm_rpc_checkpoint_task_comp(slurm_msg_t * msg);
 inline static void  _slurm_rpc_delete_partition(slurm_msg_t * msg);
 inline static void  _slurm_rpc_complete_job_allocation(slurm_msg_t * msg);
 inline static void  _slurm_rpc_complete_batch_script(slurm_msg_t * msg,
+						     bool *run_scheduler,
 						     bool running_composite);
 inline static void  _slurm_rpc_complete_prolog(slurm_msg_t * msg);
 inline static void  _slurm_rpc_dump_conf(slurm_msg_t * msg);
@@ -329,7 +330,8 @@ void slurmctld_req(slurm_msg_t *msg, connection_arg_t *arg)
 		break;
 	case REQUEST_COMPLETE_BATCH_JOB:
 	case REQUEST_COMPLETE_BATCH_SCRIPT:
-		_slurm_rpc_complete_batch_script(msg, 0);
+		i = 0;
+		_slurm_rpc_complete_batch_script(msg, (bool *)&i, 0);
 		break;
 	case REQUEST_JOB_STEP_CREATE:
 		_slurm_rpc_job_step_create(msg);
@@ -1963,6 +1965,7 @@ static void _slurm_rpc_complete_prolog(slurm_msg_t * msg)
 /* _slurm_rpc_complete_batch - process RPC from slurmstepd to note the
  *	completion of a batch script */
 static void _slurm_rpc_complete_batch_script(slurm_msg_t *msg,
+					     bool *run_scheduler,
 					     bool running_composite)
 {
 	static int active_rpc_cnt = 0;
@@ -1977,7 +1980,7 @@ static void _slurm_rpc_complete_batch_script(slurm_msg_t *msg,
 	uid_t uid = g_slurm_auth_get_uid(msg->auth_cred,
 					 slurmctld_config.auth_info);
 	bool job_requeue = false;
-	bool dump_job = false, dump_node = false, run_sched = false;
+	bool dump_job = false, dump_node = false;
 	struct job_record *job_ptr = NULL;
 	char *msg_title = "node(s)";
 	char *nodes = comp_msg->node_name;
@@ -2188,10 +2191,11 @@ static void _slurm_rpc_complete_batch_script(slurm_msg_t *msg,
 		slurmctld_diag_stats.jobs_completed++;
 		dump_job = true;
 		if (replace_batch_job(msg, job_ptr, running_composite))
-			run_sched = true;
+			*run_scheduler = true;
 	}
 
-	if (!running_composite && run_sched)
+	/* If running composite lets not call this to avoid deadlock */
+	if (!running_composite && *run_scheduler)
 		(void) schedule(0);		/* Has own locking */
 	if (dump_job)
 		(void) schedule_job_save();	/* Has own locking */
@@ -5815,7 +5819,8 @@ static void  _slurm_rpc_comp_msg_list(composite_msg_t * comp_msg,
 			break;
 		case REQUEST_COMPLETE_BATCH_SCRIPT:
 		case REQUEST_COMPLETE_BATCH_JOB:
-			_slurm_rpc_complete_batch_script(next_msg, 1);
+			_slurm_rpc_complete_batch_script(next_msg,
+							 run_scheduler, 1);
 			break;
 		case REQUEST_STEP_COMPLETE:
 			_slurm_rpc_step_complete(next_msg, 1);
